# HawkEye

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_FINDINGS.md  Dockerfile  README.md  app.py  day1.ipynb  day2.ipynb  day3.ipynb  evaluator.py  fly.toml  main.py  pyproject.toml  rag_build_guide.md
.github/workflows/: fly-deploy.yml
evaluation/: eval.py  generate_spanning.py  generate_tests.py  spanning_draft.jsonl  test.py  tests.jsonl
implementation/: answer.py  ingest.py  test_retrieval.py  test_rewrite.py
scraper/: convert_to_markdown.py  scrape_kb.py  scrape_kb_authenticated.py
supabase/: schema.sql
