[project]
name = "hawkeye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "google-genai>=2.11.0",
    "gradio>=6.20.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "markdownify>=1.2.3",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tiktoken>=0.13.0",
]
